# LidDrivenCavitySolver

./: .gitignore  CMakeLists.txt  N20_dt0p001_T0p01.csv
intitial.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
plot/: csv2contour.m  csv2contour.m~  csv2scalingplot.m  multi_csv2contour.m
results/: LDCoutput_Lx_1_Ly_1_Nx161_Ny_161_T_200_Re_3200.csv  LDCoutput_Lx_1_Ly_1_Nx_100_Ny_100_Px_1_Py_1_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_100_Ny_100_Px_2_Py_1_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_100_Ny_100_Px_2_Py_2_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_100_Ny_100_Px_4_Py_2_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_100_Ny_100_Px_4_Py_4_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_100_Ny_100_Px_6_Py_5_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_161_Ny_161_T_100_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_161_Ny_161_T_100_Re_400.csv  LDCoutput_Lx_1_Ly_1_Nx_200_Ny_200_Px_6_Py_5_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_50_Ny_50_Px_2_Py_2_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_50_Ny_50_Px_2_Py_2_T_5_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_50_Ny_50_Px_6_Py_5_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_55_Ny_55_Px_2_Py_2_T_50_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_75_Ny_75_Px_4_Py_3_T_0_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_75_Ny_75_T_0_Re_100.csv  LDCoutput_Lx_1_Ly_1_Nx_75_Ny_75_T_10_Re_100.csv  LDCoutput_Lx_1_Ly_2_Nx_161_Ny_161_T_100_Re_100.csv  LDCoutput_Lx_2_Ly_1_Nx_161_Ny_161_T_200_Re_100.csv  LDCoutput_Nx161_Ny_161_T_100_Re_1000.csv  LDCoutput_Nx161_Ny_161_T_100_Re_3200.csv  LDCoutput_Nx161_Ny_161_T_50_Re_100.csv  LDCoutput_Nx50_Ny_50_T_5_Re_100.csv  N20_dt0p001_T0p01.csv  test.csv
src/: LDCmngMPI.cpp  LDCmngMPI.h  LDCpoissonSolver.cpp  LDCpoissonSolver.h  a.out  (+11 more)
(+286 files in other folders)
